--- a/ZCUtilsProject/Podfile
+++ b/ZCUtilsProject/Podfile
@@ -53,6 +53,9 @@ post_install do |installer|
       config.build_settings['ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
       config.build_settings['VALID_ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      config.build_settings['CODE_SIGN_IDENTITY'] = ''
+      config.build_settings['DEVELOPMENT_TEAM'] = ''
+      config.build_settings['SDKROOT'] = 'iphoneos'
       
       if !dev_pods.include?(target.name)
         config.build_settings['OTHER_CFLAGS'] = '$(inherited) -w'
